# hackathon2-TODOapp

./: .env.example  .gitignore  README.md  docker-compose.infra.yaml  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_task_table.py  002_change_user_id_to_string.py  003_create_conversation_table.py  004_create_message_table.py  005_add_priority_and_due_date.py  006_phase_v_event_driven_extensions.py  2622ddabaf3c_add_chatkit_session_table.py
backend/app/: main.py
backend/app/agent/: __init__.py  context.py  prompts.py  todo_agent.py
backend/app/api/routes/: __init__.py  chat.py  (+4 more)
backend/app/config/: database.py  settings.py
backend/app/dependencies/: auth.py  database.py
backend/app/mcp/: __init__.py  server.py
backend/app/middleware/: __init__.py  correlation.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  chatkit_session.py  conversation.py  events.py  message.py  notification.py  processed_event.py  recurrence.py  task.py
backend/app/schemas/: chat.py  task.py
backend/app/services/: __init__.py  chat_service.py  chatkit_session_service.py  conversation_service.py  event_publisher.py  idempotency.py  notification_service.py  reminder_publisher.py  task_service.py
backend/app/tools/: __init__.py  task_tools.py
backend/tests/: test_chat_integration.py  test_conversation_service.py  test_mcp_tools.py
services/notification/: Dockerfile  pyproject.toml
services/notification/app/: __init__.py  handlers.py  main.py  scheduler.py
(+286 files in other folders)
